Closed Bug 792625 Opened 13 years ago Closed 13 years ago

xpcshell does not accept non-ASCII command line arguments

Categories

(Core :: XPConnect, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: khuey, Assigned: khuey)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
We call NS_ConvertUTF8toUTF16 on argv, but what we get from argv is not in UTF-8 on Windows, it's in the system code page. The easy solution here is to use nsWindowsWMain.cpp for xpcshell, but that requires some trickiness to deal with envp.
Attachment #662743 - Flags: review?(benjamin)
Attachment #662743 - Flags: review?(benjamin) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: