Bug 792625: Fix xpcshell to accept non-ASCII command line arguments on Windows. r=bsmedberg